# Monopoly

./: .gitignore  LICENSE  README.md
doc/: 大富翁游戏说明.md  大富翁项目文档.md
monopoly/: CMakeLists.txt
monopoly/Classes/: AppDelegate.cpp  ZH.cpp  ZH.h
monopoly/Classes/Character/: Character.cpp  Character.h  Dice.cpp  Dice.h
monopoly/Classes/Common/: CommonConstant.h  CommonMethod.cpp  CommonMethod.h
monopoly/Classes/God/: Angel.cpp  Angel.h  Devil.cpp  Devil.h  Earth.cpp  Earth.h  God.cpp  God.h  Luck.cpp  Luck.h  MinePosition.cpp  MinePosition.h  Poor.cpp  Poor.h  Rich.cpp  Rich.h  Unluck.cpp  Unluck.h
monopoly/Classes/Incident/: Criminal.cpp  Criminal.h  Economy.cpp  Economy.h  Finance.cpp  Finance.h  Holiday.cpp  Holiday.h  Incident.cpp  Incident.h  Medical.cpp  Medical.h  PopUpLayer.cpp  PopUpLayer.h  Realtor.cpp  Realtor.h  Staff.cpp  Staff.h  Stay.cpp  Stay.h
monopoly/Classes/Item/: AngelCard.cpp  AngelCard.h  Average.cpp  Average.h  BlackCard.cpp  BlackCard.h  Car.cpp  Car.h  ControlDice.cpp  ControlDice.h  DevilCard.cpp  DevilCard.h  Escape.cpp  Escape.h  Frame.cpp  Frame.h  HouseChange.cpp  HouseChange.h  HouseDestory.cpp  HouseDestory.h  HouseExchange.cpp  HouseExchange.h  Impute.cpp  Impute.h  Item.h  Mine.cpp  Mine.h  Missile.cpp  Missile.h  Motor.cpp  Motor.h  Pray.cpp  Pray.h  RedCard.cpp  RedCard.h  Revenge.cpp  Revenge.h  RidGod.cpp  RidGod.h  RidHospital.cpp  (+19 more)
monopoly/Classes/Land/: Aviation.cpp  Aviation.h  Bank.cpp  Bank.h  Business.cpp  Business.h  Chance.cpp  Chance.h  Hospital.cpp  Hospital.h  Hotel.cpp  Hotel.h  Insurance.cpp  Insurance.h  Jail.cpp  Jail.h  Land.h  Life.cpp  Life.h  Oil.cpp  Oil.h  Park.cpp  Park.h  Technology.cpp  Technology.h
monopoly/Classes/Scene/: GameController.cpp  GameController.h  ItemScene.cpp  ItemScene.h  MapScene.cpp  MapScene.h  SelectScene.cpp  SelectScene.h  SettingScene.cpp  SettingScene.h  StartScene.cpp  StartScene.h  StockScene.cpp  StockScene.h  StorkScene.cpp  StorkScene.h
monopoly/Resources/: camera.tmx  game.tmx  gamemap.tmx  grass.tsx  image.tsx  iori.plist  jingtian.plist  luff.plist  map.tmx  miku.plist  nanxiaoniao.plist  road1.tsx  road2.tsx  road3.tsx  road4.tsx  road5.tsx  road6.tsx  usagi.plist
monopoly/Resources/Character/: bantianyinshi.plist
monopoly/proj.android/: settings.gradle
monopoly/proj.android/app/: AndroidManifest.xml  build.gradle
monopoly/proj.android/app/res/values/: strings.xml
monopoly/proj.ios_mac/mac/: Info.plist
richman/: CMakeLists.txt
richman/Classes/: AppDelegate.cpp
richman/proj.android/app/: build.gradle
